@@ -4,7 +4,7 @@
       "Marc Mims <marc@questright.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.011, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.010, CPAN::Meta::Converter version 2.150001",
    "license" : [
       "perl_5"
    ],
@@ -77,55 +77,55 @@
    "provides" : {
       "Twitter::API" : {
          "file" : "lib/Twitter/API.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Context" : {
          "file" : "lib/Twitter/API/Context.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Error" : {
          "file" : "lib/Twitter/API/Error.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Role::RequestArgs" : {
          "file" : "lib/Twitter/API/Role/RequestArgs.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::ApiMethods" : {
          "file" : "lib/Twitter/API/Trait/ApiMethods.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::AppAuth" : {
          "file" : "lib/Twitter/API/Trait/AppAuth.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::DecodeHtmlEntities" : {
          "file" : "lib/Twitter/API/Trait/DecodeHtmlEntities.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::Enchilada" : {
          "file" : "lib/Twitter/API/Trait/Enchilada.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::Migration" : {
          "file" : "lib/Twitter/API/Trait/Migration.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::NormalizeBooleans" : {
          "file" : "lib/Twitter/API/Trait/NormalizeBooleans.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::RateLimiting" : {
          "file" : "lib/Twitter/API/Trait/RateLimiting.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Trait::RetryOnError" : {
          "file" : "lib/Twitter/API/Trait/RetryOnError.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       },
       "Twitter::API::Util" : {
          "file" : "lib/Twitter/API/Util.pm",
-         "version" : "0.0113"
+         "version" : "1.0001"
       }
    },
    "release_status" : "stable",
@@ -141,7 +141,7 @@
       },
       "x_IRC" : "irc://irc.perl.org/#net-twitter"
    },
-   "version" : "0.0113",
+   "version" : "1.0001",
    "x_contributors" : [
       "Andrew Grangaard <granny-github@ofb.net>",
       "Dave Jacoby <jacoby.david@gmail.com>",
@@ -151,6 +151,6 @@
       "Mohammad S Anwar <mohammad.anwar@yahoo.com>",
       "Rob Hoelz <rob@hoelz.ro>"
    ],
-   "x_serialization_backend" : "Cpanel::JSON::XS version 3.0239"
+   "x_serialization_backend" : "Cpanel::JSON::XS version 3.0213"
 }
 
