@@ -1,6 +1,6 @@
 author         = Marc Mims <marc@questright.com>
 license        = Perl_5
-copyright_year = 2015-2016
+copyright_year = 2015-2018
 copyright_holder = Marc Mims
 
 ;; copied from @Milla and modified
