@@ -1,6 +1,8 @@
 Revision history for Twitter::API
 
 {{$NEXT}}
+  - added RateLimiting trait (thanks Rob Hoelz)
+  - removed the alpha designation - it's production ready
 
 0.0113  2017-07-18 16:20:14 PDT
   - make Dist::Zilla happy again
